tob/tps/.svn/pristine/57/5778ecf628ca5ba429fef04e2e5294227ff71062.svn-base
allumettes/Jouer.java:42: error: cannot find symbol
						case Expert.NOM_STRATEGIE: strategie = new Expert();
						     ^
  symbol:   variable Expert
  location: class Jouer
allumettes/Jouer.java:42: error: cannot find symbol
						case Expert.NOM_STRATEGIE: strategie = new Expert();
						                                           ^
  symbol:   class Expert
  location: class Jouer
2 errors
